added logo and image folder and start of header

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <title>Home</title>
+    <link href="css/normalize.css" rel="stylesheet" />
+    <link href="css/foundation.min.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
 </head>
 <body>
-
+    <div class="row">
+        <div class="small-3 columns">
+            <img src="img/logo.png" />
+        </div>
+        <header class="small-9 columns">
+            <h1>Kevin Donkers</h1>
+        </header>
+    </div>
 </body>
 </html>
