tweaks to contact me section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@
                                 <a href="https://github.com/KevinDonkers" class="button round">GitHub</a>
                             </div>
                         </div>
-                        <a href="https://twitter.com/" class="button round">Twitter</a>
+                        <a href="https://twitter.com/DaDerpy" class="button round">Twitter</a>
                         <a href="https://www.linkedin.com/profile/view?id=323768775&trk=nav_responsive_tab_profile" class="button round">Linkedin</a>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
 
                     <div class="row">
                         <div class="small-12 columns">
-                            <h4></h4>
+                            <h4>I have a github account with a couple of repositories I made for school.  Click the button to be magically transported there <a href="https://github.com/KevinDonkers" class="button round">GitHub</a></h4>
                         </div>
                     </div>
 
@@ -296,13 +296,18 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-8 small-centered columns">
-                            <h4>
-                                Email: kevindonkers1@gmail.com
-                                <a href="https://www.facebook.com/kevin.donkers.52" class="button round">Facebook</a>
-                                <a href="https://www.linkedin.com/profile/view?id=323768775&trk=nav_responsive_tab_profile" class="button round">Linkedin</a>
-                            </h4>
-                            
+                        <div class="small-6 columns">
+                            <h4>Keep Connected</h4>
+                            <a href="https://www.facebook.com/kevin.donkers.52" class="button round">Facebook</a>
+                            <a href="https://www.linkedin.com/profile/view?id=323768775&trk=nav_responsive_tab_profile" class="button round">Linkedin</a>
+                            <a href="https://twitter.com/DaDerpy" class="button round">Twitter</a>
+                            <a href="https://github.com/KevinDonkers" class="button round">GitHub</a>
+                        </div>
+
+                        <div class="small-6 columns">
+                            <h4>Contact Info</h4>
+                            <p>Email: kevindonkers1@gmail.com<br />
+                                Phone Number: (519)851-1535</p>
                         </div>
                     </div>
 
