made the page more responsive

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="row">
-        <div class="small-3 columns">
+        <div class="medium-3 columns">
             <img id="logo" src="img/logo.png" />
         </div>
 
-        <header class="small-9 columns">
+        <header class="medium-9 columns">
             <h1>Kevin Donkers</h1>
 
             <div class="row">
-                <div class="small-12 columns">
+                <div class="medium-12 columns">
                     <div id="nav" data-magellan-expedition="fixed">
                         <dl class="sub-nav">
                             <dd data-magellan-arrival="welcome"><a href="#welcome">Welcome</a></dd>
@@ -38,7 +38,7 @@
         <div class="small-12 columns">
             <article>
                 <div class="row">
-                    <div class="small-6 columns">
+                    <div class="medium-6 columns">
                         <a name="welcome"></a>
                         <h3 data-magellan-destination="welcome">Welcome to my World</h3>
                         <p>Kevin's my name, coding's my game.</p>
@@ -90,10 +90,6 @@
                 </div>
 
                 <div class="row">
-
-                </div>
-
-                <div class="row">
                     <footer class="small-12 columns">
                         <p>© 2014 All rights reserved.  Powered by Foundation</p>
                     </footer>
@@ -113,7 +109,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-10 small-centered columns">
+                        <div class="medium-10 medium-centered columns">
                             <h5>Qualifications</h5>
                             <ul>
                                 <li>Moderate experience with applications: Word, Excel, Outlook and PowerPoint</li>
@@ -133,10 +129,10 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-2 columns">
+                        <div class="medium-2 columns">
                             <h5>2013-Present</h5>
                         </div>
-                        <div class="small-10 columns">
+                        <div class="medium-10 columns">
                             <p>
                                 Georgian College, Barrie, Ontario<br />
                                 Computer Programmer Analyst (Co-op) Diploma Program, Dean’s status 88.7%.<br />
@@ -146,10 +142,10 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-2 columns">
+                        <div class="medium-2 columns">
                             <h5>2010-2012</h5>
                         </div>
-                        <div class="small-10 columns">
+                        <div class="medium-10 columns">
                             <p>
                                 East Elgin Secondary School, Aylmer, Ontario - Diploma<br />
                                 Studied multiple computer and programming related courses, learning HTML and Turing<br />
@@ -159,10 +155,10 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-2 columns">
+                        <div class="medium-2 columns">
                             <h5>Work Experence</h5>
                         </div>
-                        <div class="small-10 columns">
+                        <div class="medium-10 columns">
                             <p>
                                 Boom Digital Media Group, Junior Quality Assurance Engineer<br />
                                 Fentie Farms, preformed dairy farm tasks i.e. milking cows
@@ -171,10 +167,10 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-2 columns">
+                        <div class="medium-2 columns">
                             <h5>Interests</h5>
                         </div>
-                        <div class="small-10 columns">
+                        <div class="medium-10 columns">
                             <p>My hobbies include Curling, Disassembling and reassembling computers (laptops and desktop systems) and Video games (playing and creating small games)</p>
                         </div>
                     </div>
@@ -194,40 +190,40 @@
                     </div>
 
                     <div id="project" class="row">
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/W2014/assignment2/default.php?id=1">
                                 <img src="img/curling.png" />
                             </a>
                         </div>
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <p>I made a website based of the Canada Curling website.  It was the final project for my second semester web programming class.  It is made with PHP, HTML5, CSS3 and MySQL for the database work.  it was created with full back-end functionality to add and delete pages on the website as well as add and delete administrators.</p>
                         </div>
                     </div>
 
                     <div id="project" class="row">
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/poster/">
                                 <img src="img/jurassic_park.png" />
                             </a>
                         </div>
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <p>I made a simple webpage for my first semester web and internet fundimentals.  The assignment was to recreate a movie poster in a webpage.  I chose a Jurrasic Park poster.  This poster was constructed with HTML5 and CSS3.</p>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/web_project/">
                                 <img src="img/yoyo.png" />
                             </a>
                         </div>
-                        <div class="small-6 columns">
-                            <p>My partner Hrvoje and I made this webpage as the final project for our web and internet fundimentals class.  The project was to create a webpage based on a cool product or service.  so we chose the YoYo.  This webpage is built using HTML5 and CSS3.</p>
+                        <div class="medium-6 columns">
+                            <p>My partner Hrvoje and I made this webpage as the final project for our web and internet fundimentals class.  The project was to create a webpage based on a cool product or service.  So we chose the YoYo.  This webpage is built using HTML5 and CSS3.</p>
                         </div>
                     </div>
 
                     <div class="row">
-                        <footer class="small-6 columns">
+                        <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
                         </footer>
                     </div>
@@ -241,28 +237,28 @@
                     </div>
 
                     <div id="project" class="row">
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <h4>Web Design</h4>
                             <p>I have experence doing web design in HTML5, CSS3, and Javascript as well as some PHP for the server side.  I have learned to use development tools such as Foundation to create responsive webpages for smaller screen sizes such as cellphones or tablets.</p>
                         </div>
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
+                            <img src="img/foundationcropround.png" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="medium-6 columns">
                             <h4>Development</h4>
                             <p>I have learned to develop in a number of languages including Java, MySQL, PHP, Javascript web games and a little bit of C#.  I have experence using versioning software such as Subversion and GitHub.  I also have experence working with the Scrum style of development.</p>
                         </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="small-6 columns">
-                            <img id="round" src="img/foundationcropround.png" />
-                        </div>
-                        <div class="small-6 columns">
-                            <img id="round" src="img/ScrumSmallNoLabels.png" />
-                            <img id="round" src="img/javaclear.png" />
+                        <div class="medium-6 columns">
+                            <img src="img/ScrumSmallNoLabels.png" />
+                            <img src="img/javaclear.png" />
                         </div>
                     </div>
 
                     <div class="row">
-                        <footer class="small-6 columns">
+                        <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
                         </footer>
                     </div>
@@ -282,7 +278,7 @@
                     </div>
 
                     <div class="row">
-                        <footer class="small-6 columns">
+                        <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
                         </footer>
                     </div>
@@ -296,7 +292,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <h4>Keep Connected</h4>
                             <a href="https://www.facebook.com/kevin.donkers.52" class="button round">Facebook</a>
                             <a href="https://www.linkedin.com/profile/view?id=323768775&trk=nav_responsive_tab_profile" class="button round">Linkedin</a>
@@ -304,7 +300,7 @@
                             <a href="https://github.com/KevinDonkers" class="button round">GitHub</a>
                         </div>
 
-                        <div class="small-6 columns">
+                        <div class="medium-6 columns">
                             <h4>Contact Info</h4>
                             <p>Email: kevindonkers1@gmail.com<br />
                                 Phone Number: (519)851-1535</p>
@@ -312,7 +308,7 @@
                     </div>
 
                     <div class="row">
-                        <footer class="small-6 columns">
+                        <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
                         </footer>
                     </div>
