--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,18 +1,29 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    index.html
+    Kevin Donkers
+    portfolio website
+    This is a portfolio website for Kevin Donkers
+-->
+
+<!DOCTYPE html>
 <html>
 <head>
+    <!--utf-8 character set-->
     <meta charset="utf-8" />
     <title>Home</title>
+    <!--CSS Section-->
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/foundation.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
 </head>
 <body>
+    <!--logo and nav bar row-->
     <div class="row">
         <div class="medium-3 columns">
             <img id="logo" src="img/logo.png" />
         </div>
 
+        <!--header and nav bar-->
         <header class="medium-9 columns">
             <h1>Kevin Donkers</h1>
 
@@ -33,17 +44,21 @@
         </header>
     </div>
 
-
+    <!--row for welcome, intro paragraph and keep connected-->
     <div class="row">
         <div class="small-12 columns">
             <article>
                 <div class="row">
+
+                    <!--welcome and intro paragraph-->
                     <div class="medium-6 columns">
                         <a name="welcome"></a>
                         <h3 data-magellan-destination="welcome">Welcome to my World</h3>
                         <p>Kevin's my name, coding's my game.</p>
                         <p>I love coding because my dad is a programmer so I grew up with it, I am a logical thinker and good problem solver, and I am good at and love math which is helpful when coding.</p>
                     </div>
+
+                    <!--Keep connected-->
                     <div id="connect" class="small-6 columns">
                         <h4>Keep Connected</h4>
                         <div class="row">
@@ -57,6 +72,7 @@
                     </div>
                 </div>
 
+                <!--orbit slider-->
                 <div class="row">
                     <div class="small-12 columns">
                         <h4>Featured Work</h4>
@@ -89,6 +105,7 @@
                     </div>
                 </div>
 
+                <!--copyright statement-->
                 <div class="row">
                     <footer class="small-12 columns">
                         <p>© 2014 All rights reserved.  Powered by Foundation</p>
@@ -96,10 +113,18 @@
                 </div>
 
 
+                <!--About me title-->
                 <div class="row">
                     <div class="small-12 columns">
                         <a name="about"></a>
                         <h3 data-magellan-destination="about">About Me</h3>
+                    </div>
+
+                    <!--Image of me-->
+                    <div class="row">
+                        <div class="small-4 columns">
+                            <img src="img/Portrait.jpg" />
+                        </div>
                     </div>
 
                     <div class="row">
@@ -108,6 +133,7 @@
                         </div>
                     </div>
 
+                    <!--CV section-->
                     <div class="row">
                         <div class="medium-10 medium-centered columns">
                             <h5>Qualifications</h5>
@@ -175,6 +201,7 @@
                         </div>
                     </div>
 
+                    <!--copyright statement-->
                     <div class="row">
                         <footer class="small-12 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
@@ -182,13 +209,14 @@
                     </div>
                 </div>
 
-
+                <!--projects section-->
                 <div class="row">
                     <div class="small-12 columns">
                         <a name="projects"></a>
                         <h3 data-magellan-destination="projects">Projects</h3>
                     </div>
 
+                    <!--curling project and description-->
                     <div id="project" class="row">
                         <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/W2014/assignment2/default.php?id=1">
@@ -200,6 +228,7 @@
                         </div>
                     </div>
 
+                    <!--poster project and description-->
                     <div id="project" class="row">
                         <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/poster/">
@@ -211,6 +240,7 @@
                         </div>
                     </div>
 
+                    <!--yoyo project and description-->
                     <div class="row">
                         <div class="medium-6 columns">
                             <a href="http://webdesign4.georgianc.on.ca/~200251054/web_project/">
@@ -222,6 +252,7 @@
                         </div>
                     </div>
 
+                    <!--copyright statement-->
                     <div class="row">
                         <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
@@ -229,13 +260,14 @@
                     </div>
                 </div>
 
-
+                <!--services section-->
                 <div class="row">
                     <div class="small-12 columns">
                         <a name="services"></a>
                         <h3 data-magellan-destination="services">Services</h3>
                     </div>
 
+                    <!--webdesign service section-->
                     <div id="project" class="row">
                         <div class="medium-6 columns">
                             <h4>Web Design</h4>
@@ -246,6 +278,7 @@
                         </div>
                     </div>
 
+                    <!--development service section-->
                     <div class="row">
                         <div class="medium-6 columns">
                             <h4>Development</h4>
@@ -257,6 +290,7 @@
                         </div>
                     </div>
 
+                    <!--copyright statement-->
                     <div class="row">
                         <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
@@ -264,19 +298,21 @@
                     </div>
                 </div>
 
-
+                <!--github section-->
                 <div class="row">
                     <div class="small-12 columns">
                         <a name="github"></a>
                         <h3 data-magellan-destination="github">GitHub</h3>
                     </div>
 
+                    <!--github statement and button-->
                     <div class="row">
                         <div class="small-12 columns">
                             <h4>I have a github account with a couple of repositories I made for school.  Click the button to be magically transported there <a href="https://github.com/KevinDonkers" class="button round">GitHub</a></h4>
                         </div>
                     </div>
 
+                    <!--copyright statement-->
                     <div class="row">
                         <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
@@ -284,13 +320,14 @@
                     </div>
                 </div>
 
-
+                <!--contact me section-->
                 <div class="row">
                     <div class="small-12 columns">
                         <a name="contact"></a>
                         <h3 data-magellan-destination="contact">Contact Me</h3>
                     </div>
 
+                    <!--keep connected column-->
                     <div class="row">
                         <div class="medium-6 columns">
                             <h4>Keep Connected</h4>
@@ -300,13 +337,17 @@
                             <a href="https://github.com/KevinDonkers" class="button round">GitHub</a>
                         </div>
 
+                        <!--contact info section-->
                         <div class="medium-6 columns">
                             <h4>Contact Info</h4>
-                            <p>Email: kevindonkers1@gmail.com<br />
-                                Phone Number: (519)851-1535</p>
+                            <p>
+                                Email: kevindonkers1@gmail.com<br />
+                                Phone Number: (519)851-1535
+                            </p>
                         </div>
                     </div>
 
+                    <!--copyright statement-->
                     <div class="row">
                         <footer class="medium-6 columns">
                             <p>© 2014 All rights reserved.  Powered by Foundation</p>
